# mfc

backend/: README.md  pyproject.toml
backend/backend/: cas_parser.py  main.py  models.py  sqlite_engine.py
backend/database/: mf.db  models.py
backend/tests/: mfc.postman_collection.json  test_file_upload.py
