[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["nethish <nethish259@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.1"
uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}
tabula-py = "^2.9.0"
sqlalchemy = "^2.0.25"
python-multipart = "^0.0.9"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
